<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rowCount="3">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_title"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/uscdTextView"
            android:layout_width="211dp"
            android:layout_height="98dp"
            android:text="@string/uscd_website"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_gravity="left|center_vertical"
            app:layout_row="1" />

        <TextView
            android:id="@+id/memeTextView"
            android:layout_width="211dp"
            android:layout_height="98dp"
            android:text="@string/meme_website"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_gravity="left"
            app:layout_row="2" />

        <Button
            android:id="@+id/uscdGoButton"
            android:layout_width="99dp"
            android:layout_height="86dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:onClick="openWebsite"
            android:tag="@string/uscd_tag"
            android:text="@string/button_text"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="1" />

        <Button
            android:id="@+id/memeGoButton"
            android:layout_width="99dp"
            android:layout_height="86dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:onClick="openWebsite"
            android:tag="@string/meme_tag"
            android:text="@string/button_text"
            app:layout_column="0"
            app:layout_gravity="end"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>